After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772940 - Fix updates monitor use
Fix updates monitor use
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-10-14 14:49 UTC by Joaquim Rocha
Modified: 2016-10-14 16:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Always initialize the updates monitor (2.71 KB, patch)
2016-10-14 14:50 UTC, Joaquim Rocha
none Details | Review
Use a gsetting for auto-refreshing on metered connections (2.59 KB, patch)
2016-10-14 14:50 UTC, Joaquim Rocha
none Details | Review
Change how the payload flag is used in the updates monitor (1.87 KB, patch)
2016-10-14 14:50 UTC, Joaquim Rocha
none Details | Review
Use a gsetting for auto-refreshing on metered connections (2.58 KB, patch)
2016-10-14 15:02 UTC, Joaquim Rocha
none Details | Review

Description Joaquim Rocha 2016-10-14 14:49:57 UTC
The updates monitor is being initialized/killed depending on the value of the download-updates setting but the use of this setting should be the responsibility of the updates monitor and it should always be initialized.

The monitor also prevents the automatic checking when on a metered connection but this may not be desirable for all users so there should be a way to configure this.
Comment 1 Joaquim Rocha 2016-10-14 14:50:06 UTC
Created attachment 337726 [details] [review]
Always initialize the updates monitor

The updates monitor was being initialized and destroyed depending on
the download-updates setting. This setting however should not be
enough to dictate what the updates monitor does as some plugins can
implement a refresh that will fetch info about the updates without
having to download them.
Comment 2 Joaquim Rocha 2016-10-14 14:50:26 UTC
Created attachment 337727 [details] [review]
Use a gsetting for auto-refreshing on metered connections

GNOME Software was simply preventing any checks for updates when on a
metered connection but some users may have that kind of connection
as their only one and wish to perform those checks.
Comment 3 Joaquim Rocha 2016-10-14 14:50:41 UTC
Created attachment 337728 [details] [review]
Change how the payload flag is used in the updates monitor

This patch makes the updates monitor use the payload flag only if
the download-updates setting is true. Otherwise it just uses the
metadata flag.
Comment 4 Joaquim Rocha 2016-10-14 15:02:34 UTC
Created attachment 337729 [details] [review]
Use a gsetting for auto-refreshing on metered connections

GNOME Software was simply preventing any checks for updates when on a
metered connection but some users may have that kind of connection
as their only one and wish to perform those checks.
Comment 5 Joaquim Rocha 2016-10-14 16:09:01 UTC
Pushed to master after Richard's +1.