Always initialize the updates monitor

The updates monitor was being initialized and destroyed depending on
the download-updates setting. This setting however should not be
enough to dictate what the updates monitor does as some plugins can
implement a refresh that will fetch info about the updates without
having to download them.

https://bugzilla.gnome.org/show_bug.cgi?id=772940